Fix alignment

--- a/scss/layouts/_social-proof.scss
+++ b/scss/layouts/_social-proof.scss
@@ -59,9 +59,11 @@
         font-family: "League Spartan", sans-serif;
         font-size: t.$body-font-size;
         color: v.$dark-grayish-magenta;
+        text-align: center;
 
         @include m.breakpoint-xl() {
             max-width: 45rem;
+            text-align: left;
         }
     }
 }
